# SpineGuard

./: .gitignore  AGENTS.md  PROJECT_DESIGN_AND_LOGIC.md  README.md
backend/: .env.example  HARDWARE_FEATURES_BACKEND_GUIDE.md  RAW_PRESSURE_V2_CHANGELOG.md  README.md  REPORT_AND_NOTIFICATION_GUIDE.md  SOFTAP_DEVICE_PAIRING_GUIDE.md  requirements.txt
docs/: api-contract.md  architecture.md  database-design.md  game-contract.md  implemented-api.md  telemetry-contract.md
firmware/: CMakeLists.txt  README.md  SpineGuard硬件工程README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  device_commands.c  device_commands.h  device_config.c  device_config.h  device_health.c  device_health.h  device_identity.c  device_identity.h  device_ota.c  device_ota.h  device_registration.c  device_registration.h  fsr_pipeline.c  fsr_pipeline.h  motor_control.c  motor_control.h  posture_alert.c  posture_alert.h  posture_inference.c  posture_inference.h  posture_model.c  posture_model.h  telemetry.c  telemetry.h  vl53l1x_driver.c  vl53l1x_driver.h  wifi_manager.c  wifi_manager.h
miniapp/: .gitignore  BACKEND_INTEGRATION.md  LLM_SETUP.md  PROJECT_GUIDE.md  app.js  app.json  project.config.json
scripts/: send_mock_telemetry.py
shared/: example.json  schema.json
web/: ADMIN_BACKEND_GAPS.md  LOCAL_TESTING.md  admin-workspace.js  api.js  app.js  config.js  exercise-guide.js  focus-timer.js  garden-service.js  index.html  markdown-renderer.js  mock-api.js  models.js  package-lock.json  package.json  styles.css  tsconfig.json  (+1 more)
(+127 files in other folders)
